# ellipticbn

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_all_tests.sh  setup.py
.github/workflows/: pypi-publish.yml  python-app.yml  wheels.yml
CBn_analysis/: CBn_analysis.py  execute_CBn_analysis.py
ElliptiC/: ElliptiC.py
ElliptiCBn/: ElliptiCBn.py  __init__.py  __version__.py  atom-colors.csv  core.py  palette-colors.txt  run_all.py
images/: exmar_huxmar-page.html
notebooks/: ElliptiC notebook.ipynb  ElliptiCBn.ipynb  ellipticbn.py
src/ellipticbn/: core.py  run_all.py
src/ellipticbn/data/: palette-colors.txt
tests/: conftest.py  test_core.py  test_run_all.py  test_script.py
tests/ellipticbn/: conftest.py  test_core.py  test_run_all.py  test_script.py
tests/ellipticbn/data/example-xyz/: BATWAW.xyz  GAFYIW.xyz
